[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspellchecker = "^0.8.1"
spacy = "^3.8.2"
markdown-it-py = "^3.0.0"
beautifulsoup4 = "^4.13.3"
openai = "^1.68.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
