[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["josh <josh@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
aiopg = "^1.4.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
